Changed LOGGER.info using NAME instead of MOD_ID, added lang keys
Took 40 minutes

--- a/src/main/resources/assets/c_undustrialized/lang/en_us.json
+++ b/src/main/resources/assets/c_undustrialized/lang/en_us.json
@@ -4,6 +4,6 @@
   "item.undustrialized.crushed_bauxite": "Crushed Bauxite",
   "item.undustrialized.aluminium_hydroxide": "Aluminium Hydroxide",
   "item.undustrialized.steel_pipe": "Steel Pipe",
-  "item.undustrialized.aluminium_hydroxide": "Aluminium Hydroxide",
+  "item.undustrialized.thermite": "Thermite",
   "item.undustrialized.seeded_aluminous_sludge": "Aluminous Sludge"
 }
