Added a way to add Blocks. And changed some minor things
Took 2 hours 31 minutes

--- a/src/main/resources/assets/undustrialized/lang/en_us.json
+++ b/src/main/resources/assets/undustrialized/lang/en_us.json
@@ -5,5 +5,24 @@
   "item.undustrialized.aluminium_hydroxide": "Aluminium Hydroxide",
   "item.undustrialized.steel_pipe": "Steel Pipe",
   "item.undustrialized.thermite": "Thermite",
-  "item.undustrialized.seeded_aluminous_sludge": "Aluminous Sludge"
+  "item.undustrialized.seeded_aluminous_sludge": "Aluminous Sludge",
+
+
+  "block.undustrialized.": "",
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  "": ""
 }
