changed CreativeModeTab translation key

--- a/src/main/resources/assets/undustrialized/lang/en_us.json
+++ b/src/main/resources/assets/undustrialized/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.c_undustrialized_cu_main": "Create: Undustrialized",
+  "itemGroup.undustrialized_cu_main": "Create: Undustrialized",
 
   "item.undustrialized.crushed_bauxite": "Crushed Bauxite",
   "item.undustrialized.aluminium_hydroxide": "Aluminium Hydroxide",
